# light-claw

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  IMPROVEMENT_RESEARCH.md  README.md  pyproject.toml  sitecustomize.py
deploy/systemd/: light-claw.service
docs/superpowers/plans/: 2026-04-19-strip-to-chat-mvp.md  2026-04-21-show-runtime-skills.md
examples/: agents.example.json
src/light_claw/: __init__.py  archive.py  archive_sync.py  chat.py  chat_commands.py  cli_runners.py  codex_runner.py  commands.py  config.py  cron.py  feishu.py  feishu_long_connection.py  heartbeat.py  message_sender.py  models.py  runtime_services.py  schedule_state.py  server.py  session_observations.py  store.py  store_records.py  task_commands.py  task_executor.py  task_progress.py  workspaces.py
src/light_claw/communication/: __init__.py  base.py  events.py  feishu.py  models.py  sender.py
src/light_claw/integrations/: __init__.py  feishu.py  feishu_long_connection.py
src/light_claw/memory/: __init__.py  api.py  guidance.py  mcp_server.py  migration.py  paths.py  session_observations.py  storage.py  task_memory.py  task_progress.py
src/light_claw/providers/: __init__.py  codex.py  registry.py
src/light_claw/runtime/: __init__.py  (+5 more)
tests/: test_archive.py  test_chat_commands.py  test_claude_code_runtime.py  test_cli_runners.py  test_cli_runtime_registry.py  test_codex_cli_runtime.py  test_codex_runner.py  test_commands.py  test_config.py  test_cron.py  test_feishu.py  test_heartbeat.py  test_server.py  test_skills.py  test_store.py  test_task_executor.py  test_workspaces.py
